    - fix issues with finding graphical su
  * added 2 new actions for viewing pgld and pglcmd log files.
  * added new widget to allow viewing and filtering information on files.
  * added error dialog

  [jre]
  * fixed: don't send stats on shutdown. Added "pglcmd stop_quick"
  * cleaned up some sendmail tests
  * buildsystem:
    - don't change PATH in pglcmd.default on "make"

-- jre <jre-phoenix@users.sourceforge.net>  Tue, 01 May 2012 15:01:57 +0200


pgl 2.1.3

  [jre]
  * added "+" to default nice values (+0 for pgld). Fixes problems with Redhat's
    init functions.
  * Makefile fixes:
    - keep default setting "use builtin LSB init functions".
    - replaced pkg-config with CFLAGS (containing the previous) in dbus.so
    - reordered recipes to build with option "as-needed".
      Fixes building in Ubuntu oneiric.
  * impoved output of show_config to show the version of the LSB init functions.

  [freemind]
  * fixed pgl-gui crash due to missing braces in if clause.

-- jre <jre-phoenix@users.sourceforge.net>  Sat, 17 Sep 2011 15:44:54 +0200


pgl 2.1.2

  [jre]
  * pgld/Makefile: moved LDFLAGS to end of rule. This should solve some
    issues with newer gcc versions
  * pgl-gui: swapped the restart and reload icons
  * documentation updates

  [freemind]
  pgl-gui:
  * fixed blank blocklist items, if blocklist is not from iblocklist.com
  * fixed temporary allowing with right-click in the log window
    kdesudo only accepts one command as argument, so execute all commands
    through the tmp script.
  * allow to specify the maximum log size (default 512 lines)
  * reduced window's minimum width and height.
  * removed unused mobloquer code
  * minor fixes

-- jre <jre-phoenix@users.sourceforge.net>  Tue, 23 Aug 2011 21:56:02 +0200


pgl 2.1.1

  [freemind]
  * pgl-gui:
    - maximum log size 512 lines
    - check if an whitelist item is already in pglcmd.conf

-- jre <jre-phoenix@users.sourceforge.net>  Sat, 13 Aug 2011 02:45:41 +0200

