@@ -31,7 +31,7 @@ initddir = @INITDDIR@
 initd_SCRIPTS = init/pgl
 
 pglcmddir = $(bindir)
-pglcmd_SCRIPTS = pglcmd blockcontrol2pglcmd.sh
+pglcmd_SCRIPTS = pglcmd blockcontrol2pglcmd
 
 pglcmdwddir = $(sbindir)
 pglcmdwd_SCRIPTS = pglcmd.wd
@@ -74,9 +74,9 @@ pglcmd.main:
 
 do_subst = sed -e 's|^CONTROL_MAIN=.*|CONTROL_MAIN=\"$(pgllibdir)/pglcmd.main\"|g'
 
-blockcontrol2pglcmd.sh:
-	$(do_subst) < blockcontrol2pglcmd.sh.in > blockcontrol2pglcmd.sh
-	chmod +x blockcontrol2pglcmd.sh
+blockcontrol2pglcmd:
+	$(do_subst) < blockcontrol2pglcmd.in > blockcontrol2pglcmd
+	chmod +x blockcontrol2pglcmd
 
 pglcmd:
 	$(do_subst) < pglcmd.in > pglcmd
@@ -104,7 +104,7 @@ networkmanager/20pglcmd:
 EXTRA_DIST = \
 	pglcmd.defaults.in \
 	pglcmd.main.in \
-	blockcontrol2pglcmd.sh.in \
+	blockcontrol2pglcmd.in \
 	pglcmd.in \
 	pglcmd.wd.in \
 	cron.daily/pglcmd.in \
@@ -116,7 +116,7 @@ EXTRA_DIST = \
 CLEANFILES = \
 	pglcmd.defaults \
 	pglcmd.main \
-	blockcontrol2pglcmd.sh \
+	blockcontrol2pglcmd \
 	pglcmd \
 	pglcmd.wd \
 	cron.daily/pglcmd \
