@@ -28,7 +28,7 @@ fi
 
 ################################################################################
 # The following code is common between pglcmd, pglcmd.wd,
-# cron.daily, init, debian/pglcmd.postinst and blockcontrol2pglcmd.sh.
+# cron.daily, init, debian/pglcmd.postinst and blockcontrol2pglcmd.
 
 # if-up is similar, but exits successfully if CONTROL_MAIN is not there, yet.
 # This can happen in early boot stages before local file systems are mounted.
